# WinosTestPlugin

./: .gitignore  CMakeLists.txt  README_Build_Instructions.md  WinosTestPlugin.cpp  WinosTestPlugin.def  build.bat  compile_direct.bat
.github/workflows/: build-dll.yml
